--- a/product-manager.html
+++ b/product-manager.html
@@ -41,19 +41,19 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/truecaller/jobs/1789918'>Job Application for Product Manager - Strategy team at Truecaller</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://generali-global-health-services.workable.com/j/D5C3D0A5AB'>Generali Global Health Services - Jobs: Product Owner - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
 <h5><a href='https://generali-global-health-services.workable.com/j/FDD22B7D70'>Generali Global Health Services - Jobs: Product Owner, Digital Transformation - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
+<p><span class="badge badge-light">Chicago Chicago, IL San Diego Chicago</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/sevenrooms/jobs/4251170002'>Job Application for Technical Product Manager at SevenRooms</a></h5> 
@@ -164,7 +164,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -172,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oHHBafwT'>Automation Anywhere Careers - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oHHBafwT'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -223,7 +223,7 @@ support, sales, marketing, and system usage data provided by development?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glossgenius.recruitee.com/o/product-manager'>Product Manager - GlossGenius</a></h5> 
+<h5><a href='https://glossgenius.recruitee.com/o/product-manager'>Product Manager - GlossGenius</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... GlossGenius is changing how beauty and wellness business owners do 
 business and now it's time to bring in an all-star product manager to lead 
@@ -279,7 +279,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/mDp7yXHGBq/Product-Manager-Operations'>Product Manager - Operations - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/mDp7yXHGBq/Product-Manager-Operations'>Product Manager - Operations - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -317,7 +317,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -341,7 +341,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clear/jobs/1793103'>Job Application for Product Designer- Contract at CLEAR - Corporate</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clear/jobs/1793103'>Job Application for Product Designer- Contract at CLEAR - Corporate</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -390,7 +390,7 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p>15. Juli 2019 ... faveo GmbH has a job opening for Junior Product Manager (m/w/d) in Essen (
 published: 06.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... unsupervised machine learning to detect fraudulent activity for financial. 
 transactions, mobile user acquisition, social networks, commerce and money.</p>
@@ -407,7 +407,7 @@ transactions, mobile user acquisition, social networks, commerce and money.</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/pagerduty/f4c0787b-c68a-478a-96a7-584e0832403b'>PagerDuty - Product Manager, Integrations</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/pagerduty/f4c0787b-c68a-478a-96a7-584e0832403b'>PagerDuty - Product Manager, Integrations</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
