--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/bankerstoolbox/job/ocJDafws'>Abrigo Careers - Marketing Intern</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oPnCafwI'>Schneider Electric - Spain Careers - Internship in Computational Linguistics</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oQnCafwJ'>Schneider Electric - Spain Careers - Internship in Process Management</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/lamudi/14322653-682b-4d24-b438-f6b5c59d1975'>Lamudi - Admin Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -57,11 +69,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://brain-effect.join.com/jobs/266102-graphic-design-intern'>Job @ BRAINEFFECT (Berlin): Graphic Design Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brain-effect.join.com/jobs/266102-graphic-design-intern'>Job @ BRAINEFFECT (Berlin): Graphic Design Intern | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/southerncaliforniaalcoholdrugprogramsinc/jobs/licensed-or-registered-intern-clinician-american-sign-language-bbE9LIR7Wr6zrcaKld2Sj6'>Licensed or Registered Intern Clinician American Sign Language #0301 job at Southern California Alcohol &amp; Drug Programs, Inc. in Downey, CA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/southerncaliforniaalcoholdrugprogramsinc/jobs/licensed-or-registered-intern-clinician-american-sign-language-bbE9LIR7Wr6zrcaKld2Sj6'>Licensed or Registered Intern Clinician American Sign Language #0301 job at Southern California Alcohol &amp; Drug Programs, Inc. in Downey, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -113,7 +125,7 @@
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -255,7 +267,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='http://unitednationsfoundation.applytojob.com/apply/YyGiMxqInq/Intern-Human-Rights-Policy-New-York'>Intern, Human Rights Policy (New York) - United Nations Foundation - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -343,7 +355,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
+<h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -392,7 +404,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -416,7 +428,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/284e8502-b3be-4e5c-b01d-a259ecc89368'>DrChrono - Finance & Accounting Intern</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -453,24 +465,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
       Intern in the field of controlling (m/f/d) - temicon GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-im-bereich-operational-excellence'>
-      Intern in the field of operational excellence (m/f/d) - temicon GmbH
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://temicongmbh.recruitee.com/l/en/o/praktikant-mwd-itprojektmanagementadministration'>
-      Intern in the field of IT projectmanagement and administration (m/f/d) - temicon GmbH
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03mai'>
-    Software Quality Assurance Intern at Humancaresystems
-</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
