Prospect Infosys Inc. Android Developer | SmartRecruiters. Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters. Job Application for Contract/Temporary- Sr. Android Developer at Wizards of the Coast. Helbiz Inc. - Android Developer. Helbiz Inc. - Android Developer - New York City. 3Pillar Global - Android Developer. Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN. Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN. Job @ endios (Hamburg): Android Lead Developer (m/... | JOIN. The Havas Group Careers - Senior Android Developer. The Havas Group Careers - Senior Android Developer. The Havas Group Careers - Android Developer. Unbabel - Android Developer. Android Developer | Panya Studios - Santora Nakama - Career Page. TransferGo - Jobs: Android Developer - Apply online. Lagash - Android Developer.       Android Developer (f/m/x) - COBI.Bike GmbH     .       Freelance Android Developer (f/m/x) - COBI.Bike GmbH     . Android Developer. Job @ CELLULAR (Vienna): Android Developer (m/w/d) | JOIN. 0708 - Stong Mid Android Developer at Workforce Source. Job Application for Insights -Android Developer at Truecaller. Multiplica - Jobs: Android Developer - Apply online. Cross Border Talents Android Developer to Work In Lisbon, Portugal | SmartRecruiters. Cross Border Talents Senior Android Mobile Developer to work in Prague, Czech Republic | SmartRecruiters. Splunk Careers - Principal Android Developer. 3Pillar Global - Android Developer. Research Innovations - Android Applications Developer. vpTech - Android Developer H/F. vpTech - Android Developer. vpTech - Android Developer. vpTech - Android Developer H/F. vpTech - Android developer H/F. vpTech - Android Developer H/F. Job Application for Senior Android Developer Barcelona at FREE NOW. Job Application for Android Developer - Autonomous Driving (m/f/d) at FREE NOW. Job Application for Android Developer (m/f/d) at FREE NOW. Job Application for Android Developer (m/f/d)  at FREE NOW. Min

--- a/android-developer.html
+++ b/android-developer.html
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -125,7 +125,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer/apply'>Android Developer</a></h5> 
+<h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer/apply'>Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 6, 2019 ... Make an impact on the browsing experience of 322 million users worldwide. 
 Have you ever dreamed of making a real impact on the way people access the 
@@ -145,7 +145,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://multiplica-1.workable.com/j/66D5883AB2'>Multiplica - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://multiplica-1.workable.com/j/66D5883AB2'>Multiplica - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid, Spain</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -193,7 +193,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1721622'>Job Application for Senior Android Developer Barcelona at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1721622'>Job Application for Senior Android Developer Barcelona at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -205,7 +205,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1746926'>Job Application for Android Developer (m/f/d)  at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -213,7 +213,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4316580002'>Job Application for Android Developer at Ocado</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4316580002'>Job Application for Android Developer at Ocado</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -244,7 +244,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -258,7 +258,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -290,7 +290,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691559986-freelance-android-mobile-developer-growth-hacking'>Netatmo Freelance - Android Mobile Developer - Growth Hacking | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999691559986-freelance-android-mobile-developer-growth-hacking'>Netatmo Freelance - Android Mobile Developer - Growth Hacking | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -316,7 +316,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999691379495-sr-mobile-ios-android-developer'>iSpace, Inc. Sr. Mobile(iOS/Android) Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -346,7 +346,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -367,7 +367,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://grofers.recruiterbox.com/jobs/fk03hug/'>
+<h5><a href='https://grofers.recruiterbox.com/jobs/fk03hug/'>
     Full Stack Android Developer at Grofers
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -393,7 +393,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -401,7 +401,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://and-digital.workable.com/j/9A17E84104'>AND Digital - Jobs: Senior Android Developer (Leeds) - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -429,7 +429,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/mdxjfDz4RE/Senior-Android-Developer'>Senior Android Developer - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/mdxjfDz4RE/Senior-Android-Developer'>Senior Android Developer - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
